--- a/index.html
+++ b/index.html
@@ -2395,19 +2395,22 @@
                 </div>
                 <div>
                     <label for="vp-lookback">Lookback:</label>
-                    <select id="vp-lookback">
-                        <option value="all">All</option>
-                        <option value="270d">270 Days</option>
-                        <option value="180d">180 Days</option>
-                        <option value="120d">120 Days</option>
-                        <option value="60d">60 Days</option>
-                        <option value="30d">30 Days</option>
-                        <option value="21d">21 Days</option>
-                        <option value="14d">14 Days</option>
-                        <option value="7d">7 Days</option>
-                        <option value="3d">3 Days</option>
-                        <option value="2d">2 Days</option>
-                    </select>
+          <select id="vp-lookback">
+    <option value="all">All</option>
+    <option value="3y">3 Years</option> <!-- Added -->
+    <option value="2y">2 Years</option> <!-- Added -->
+    <option value="1y">1 Year</option>  <!-- Added -->
+    <option value="270d">270 Days</option>
+    <option value="180d">180 Days</option>
+    <option value="120d">120 Days</option>
+    <option value="60d">60 Days</option>
+    <option value="30d">30 Days</option>
+    <option value="21d">21 Days</option>
+    <option value="14d">14 Days</option>
+    <option value="7d">7 Days</option>
+    <option value="3d">3 Days</option>
+    <option value="2d">2 Days</option>
+</select>
                 </div>
             </div>
             <p class="ema-last-updated">Last Updated: <span id="vp-last-updated-time">--</span></p>
@@ -2872,7 +2875,7 @@
                      return;
                 }
         
-                const sortOrder = ['270d', '180d', '120d', '60d', '30d', '21d', '14d', '7d', '3d', '2d'];
+                const sortOrder = ['3y', '2y', '1y', '270d', '180d', '120d', '60d', '30d', '21d', '14d', '7d', '3d', '2d'];
                 availableLookbacksForSymbol.sort((a, b) => sortOrder.indexOf(a) - sortOrder.indexOf(b));
         
                 availableLookbacksForSymbol.forEach(lookback => {
